SOURCE/Vcl/IMAGEHLP.PAS


  PAddress = ^TAddress;
  {$EXTERNALSYM _tagADDRESS}
  _tagADDRESS = record
    Offset: DWORD;
    Segment: Word;
    Mode: TAddressMode;
  end;
  {$EXTERNALSYM ADDRESS}
  ADDRESS = _tagADDRESS;
  TAddress = _tagADDRESS;

{ This structure is included in the STACKFRAME structure, }
{ and is used to trace through usermode callbacks in a thread's }
{ kernel stack.  The values must be copied by the kernel debugger }
{ from the DBGKD_GET_VERSION and WAIT_STATE_CHANGE packets. }

  PKdHelp = ^TKdHelp;
  {$EXTERNALSYM _KDHELP}
  _KDHELP = packed record { address of kernel thread object, as provided }
                          { in the WAIT_STATE_CHANGE packet. }
    Thread: DWORD;
    { offset in thread object to pointer to the current callback frame }
    { in kernel stack. }
    ThCallbackStack: DWORD;
    { offsets to values in frame: }
    { address of next callback frame }
    NextCallback: DWORD;
    { address of saved frame pointer (if applicable) }
    FramePointer: DWORD;
    { Address of the kernel function that calls out to user mode }
    KiCallUserMode: DWORD;
    { Address of the user mode dispatcher function }
    KeUserCallbackDispatcher: DWORD;
  end;
  {$EXTERNALSYM KDHELP}
  KDHELP = _KDHELP;
  TKdHelp = _KDHELP;

  PStackFrame = ^TStackFrame;
  {$EXTERNALSYM _tagSTACKFRAME}
  _tagSTACKFRAME = packed record
    AddrPC: TAddress;                  { program counter }
    AddrReturn: TAddress;              { return address }
    AddrFrame: TAddress;               { frame pointer }
    AddrStack: TAddress;               { stack pointer }
    FuncTableEntry: Pointer;          { pointer to pdata/fpo or NULL }
    Params: packed array[0..3] of DWORD;{ possible arguments to the function }
    _Far: Bool;                        { WOW far call }
    _Virtual: Bool;                    { is this a virtual frame? }
    Reserved: packed array[0..2] of DWORD;{ used internally by StackWalk api }
    KdHelp: TKdHelp;
  end;
  {$EXTERNALSYM STACKFRAME}
  STACKFRAME = _tagSTACKFRAME;
  TStackFrame = _tagSTACKFRAME;

type
  {$EXTERNALSYM PREAD_PROCESS_MEMORY_ROUTINE}
  PREAD_PROCESS_MEMORY_ROUTINE = function(hProcess: THandle;
    lpBaseAddress, lpBuffer: Pointer; nSize: DWORD;
    var lpNumberOfBytesRead: DWORD): Bool; stdcall;
  TReadProcessMemoryRoutine = PREAD_PROCESS_MEMORY_ROUTINE;

  {$EXTERNALSYM PFUNCTION_TABLE_ACCESS_ROUTINE}
  PFUNCTION_TABLE_ACCESS_ROUTINE = function(hProcess: THandle;
    AddrBase: DWORD): Pointer; stdcall;
  TFunctionTableAccessRoutine = PFUNCTION_TABLE_ACCESS_ROUTINE;

  {$EXTERNALSYM PGET_MODULE_BASE_ROUTINE}
  PGET_MODULE_BASE_ROUTINE = function(hProcess: THandle;
    ReturnAddress: DWORD): DWORD; stdcall;
  TGetModuleBaseRoutine = PGET_MODULE_BASE_ROUTINE;

  {$EXTERNALSYM PTRANSLATE_ADDRESS_ROUTINE}
  PTRANSLATE_ADDRESS_ROUTINE = function(hProcess, hThread: THandle;
    lpaddr: PAddress): DWORD; stdcall;
  TTranslateAddressRoutine = PTRANSLATE_ADDRESS_ROUTINE;

{$EXTERNALSYM StackWalk}
function StackWalk(MachineType: DWORD; hProcess, hThread: THandle;
  StackFrame: PStackFrame; ContextRecord: Pointer;
  ReadMemoryRoutine: TReadProcessMemoryRoutine;
  FunctionTableAccessRoutine: TFunctionTableAccessRoutine;
  GetModuleBaseRoutine: TGetModuleBaseRoutine;
  TranslateAddress: TTranslateAddressRoutine): Bool; stdcall;

const
  {$EXTERNALSYM API_VERSION_NUMBER}
  API_VERSION_NUMBER     = 5;

type
  PApiVersion = ^TApiVersion;
  {$EXTERNALSYM API_VERSION}
  API_VERSION = packed record
    MajorVersion: Word;
    MinorVersion: Word;
    Revision: Word;
    Reserved: Word;
  end;
  TApiVersion = API_VERSION;

{$EXTERNALSYM ImagehlpApiVersion}
function ImagehlpApiVersion: PApiVersion; stdcall;

{$EXTERNALSYM ImagehlpApiVersionEx}
function ImagehlpApiVersionEx(var AppVersion: TApiVersion): PApiVersion; stdcall;

{$EXTERNALSYM GetTimestampForLoadedLibrary}
function GetTimestampForLoadedLibrary(Module: HMODULE): DWORD; stdcall;

{$EXTERNALSYM RemovePrivateCvSymbolic}
function RemovePrivateCvSymbolic(DebugData: PChar; var NewDebugData: PChar;
  var NewDebugSize: ULONG): Bool; stdcall;

{$EXTERNALSYM RemoveRelocations}
procedure RemoveRelocations(ImageName: PChar); stdcall;


{ typedefs for function pointers }
type
  {$EXTERNALSYM PSYM_ENUMMODULES_CALLBACK}
  PSYM_ENUMMODULES_CALLBACK = function(ModuleName: LPSTR; BaseOfDll: ULONG;
    UserContext: Pointer): Bool; stdcall;
  TSymEnummodulesCallback = PSYM_ENUMMODULES_CALLBACK;

  {$EXTERNALSYM PSYM_ENUMSYMBOLS_CALLBACK}
  PSYM_ENUMSYMBOLS_CALLBACK = function(SymbolName: LPSTR; SymbolAddress,
    SymbolSize: ULONG; UserContext: Pointer): Bool; stdcall;
  TSymEnumsymbolsCallback = PSYM_ENUMSYMBOLS_CALLBACK;

  {$EXTERNALSYM PENUMLOADED_MODULES_CALLBACK}
  PENUMLOADED_MODULES_CALLBACK = function(ModuleName: LPSTR; ModuleBase,
    ModuleSize: ULONG; UserContext: Pointer): Bool; stdcall;
  TEnumloadedModulesCallback = PENUMLOADED_MODULES_CALLBACK;

  {$EXTERNALSYM PSYMBOL_REGISTERED_CALLBACK}
  PSYMBOL_REGISTERED_CALLBACK = function(hProcess: THandle; ActionCode: ULONG;
    CallbackData, UserContext: Pointer): Bool; stdcall;
  TSymbolRegisteredCallback = PSYMBOL_REGISTERED_CALLBACK;


{ symbol flags }
const
  {$EXTERNALSYM SYMF_OMAP_GENERATED}
  SYMF_OMAP_GENERATED       = $00000001;
  {$EXTERNALSYM SYMF_OMAP_MODIFIED}
  SYMF_OMAP_MODIFIED        = $00000002;


{ symbol type enumeration }
type
  {$EXTERNALSYM SYM_TYPE}
  SYM_TYPE = (
    SymNone,
    SymCoff,
    SymCv,
    SymPdb,
    SymExport,
    SymDeferred,
    SymSym                  { .sym file }
  );
  TSymType = SYM_TYPE;

{ symbol data structure }
  PImagehlpSymbol = ^TImagehlpSymbol;
  {$EXTERNALSYM _IMAGEHLP_SYMBOL}
  _IMAGEHLP_SYMBOL = packed record
    SizeOfStruct: DWORD;                                { set to sizeof(IMAGEHLP_SYMBOL) }
    Address: DWORD;                                     { virtual address including dll base address }
    Size: DWORD;                                        { estimated size of symbol, can be zero }
    Flags: DWORD;                                       { info about the symbols, see the SYMF defines }
    MaxNameLength: DWORD;                               { maximum size of symbol name in 'Name' }
    Name: packed array[0..0] of Char;                   { symbol name (null terminated string) }
  end;
  {$EXTERNALSYM IMAGEHLP_SYMBOL}
  IMAGEHLP_SYMBOL = _IMAGEHLP_SYMBOL;
  TImagehlpSymbol = _IMAGEHLP_SYMBOL;


{ module data structure }
  PImagehlpModule = ^TImagehlpModule;
  {$EXTERNALSYM _IMAGEHLP_MODULE}
  _IMAGEHLP_MODULE = record
    SizeOfStruct: DWORD;                                { set to sizeof(IMAGEHLP_MODULE) }
    BaseOfImage: DWORD;                                 { base load address of module }
    ImageSize: DWORD;                                   { virtual size of the loaded module }
    TimeDateStamp: DWORD;                               { date/time stamp from pe header }
    CheckSum: DWORD;                                    { checksum from the pe header }
    NumSyms: DWORD;                                     { number of symbols in the symbol table }
    SymType: TSymType;                                  { type of symbols loaded }
    ModuleName: packed array[0..31] of Char;            { module name }
    ImageName: packed array[0..255] of Char;            { image name }
    LoadedImageName: packed array[0..255] of Char;      { symbol file name }
  end;
  {$EXTERNALSYM IMAGEHLP_MODULE}
  IMAGEHLP_MODULE = _IMAGEHLP_MODULE;
  TImagehlpModule = _IMAGEHLP_MODULE;


{ data structures used for registered symbol callbacks }
const
  {$EXTERNALSYM CBA_DEFERRED_SYMBOL_LOAD_START}
  CBA_DEFERRED_SYMBOL_LOAD_START              = $00000001;
  {$EXTERNALSYM CBA_DEFERRED_SYMBOL_LOAD_COMPLETE}
  CBA_DEFERRED_SYMBOL_LOAD_COMPLETE           = $00000002;
  {$EXTERNALSYM CBA_DEFERRED_SYMBOL_LOAD_FAILURE}
  CBA_DEFERRED_SYMBOL_LOAD_FAILURE            = $00000003;
  {$EXTERNALSYM CBA_SYMBOLS_UNLOADED}
  CBA_SYMBOLS_UNLOADED                        = $00000004;
  {$EXTERNALSYM CBA_DUPLICATE_SYMBOL}
  CBA_DUPLICATE_SYMBOL                        = $00000005;

type
  PImagehlpDeferredSymbolLoad = ^TImagehlpDeferredSymbolLoad;
  {$EXTERNALSYM _IMAGEHLP_DEFERRED_SYMBOL_LOAD}
  _IMAGEHLP_DEFERRED_SYMBOL_LOAD = packed record
    SizeOfStruct: DWORD;                                { set to sizeof(IMAGEHLP_DEFERRED_SYMBOL_LOAD) }
    BaseOfImage: DWORD;                                 { base load address of module }
    CheckSum: DWORD;                                    { checksum from the pe header }
    TimeDateStamp: DWORD;                               { date/time stamp from pe header }
    FileName: packed array[0..MAX_PATH-1] of Char;      { symbols file or image name }
  end;
  {$EXTERNALSYM IMAGEHLP_DEFERRED_SYMBOL_LOAD}
  IMAGEHLP_DEFERRED_SYMBOL_LOAD = _IMAGEHLP_DEFERRED_SYMBOL_LOAD;
  TImagehlpDeferredSymbolLoad = _IMAGEHLP_DEFERRED_SYMBOL_LOAD;

  PImagehlpDuplicateSymbol = ^TImagehlpDuplicateSymbol;
  {$EXTERNALSYM _IMAGEHLP_DUPLICATE_SYMBOL}
  _IMAGEHLP_DUPLICATE_SYMBOL = packed record
    SizeOfStruct: DWORD;                                { set to sizeof(IMAGEHLP_DUPLICATE_SYMBOL) }
    NumberOfDups: DWORD;                                { number of duplicates in the Symbol array }
    Symbol: PImagehlpSymbol;                            { array of duplicate symbols }
    SelectedSymbol: ULONG;                           { symbol selected (-1 to start) }
  end;
  {$EXTERNALSYM IMAGEHLP_DUPLICATE_SYMBOL}
  IMAGEHLP_DUPLICATE_SYMBOL = _IMAGEHLP_DUPLICATE_SYMBOL;
  TImagehlpDuplicateSymbol = _IMAGEHLP_DUPLICATE_SYMBOL;



{ options that are set/returned by SymSetOptions() & SymGetOptions() }
{ these are used as a mask }

const
  {$EXTERNALSYM SYMOPT_CASE_INSENSITIVE}
  SYMOPT_CASE_INSENSITIVE      = $00000001;
  {$EXTERNALSYM SYMOPT_UNDNAME}
  SYMOPT_UNDNAME               = $00000002;
  {$EXTERNALSYM SYMOPT_DEFERRED_LOADS}
  SYMOPT_DEFERRED_LOADS        = $00000004;
  {$EXTERNALSYM SYMOPT_NO_CPP}
  SYMOPT_NO_CPP                = $00000008;


{$EXTERNALSYM SymSetOptions}
function SymSetOptions(SymOptions: DWORD): DWORD; stdcall;

{$EXTERNALSYM SymGetOptions}
function SymGetOptions: DWORD; stdcall;

{$EXTERNALSYM SymCleanup}
function SymCleanup(hProcess: THandle): Bool; stdcall;

{$EXTERNALSYM SymEnumerateModules}
function SymEnumerateModules(hProcess: THandle;
  EnumModulesCallback: TSymEnumModulesCallback; UserContext: Pointer): Bool; stdcall;

{$EXTERNALSYM SymEnumerateSymbols}
function SymEnumerateSymbols(hProcess: THandle; BaseOfDll: DWORD;
  EnumSymbolsCallback: TSymEnumSymbolsCallback; UserContext: Pointer): Bool; stdcall;

{$EXTERNALSYM EnumerateLoadedModules}
function EnumerateLoadedModules(hProcess: THandle;
  EnumLoadedModulesCallback: TEnumLoadedModulesCallback;
  UserContext: Pointer): Bool; stdcall;

{$EXTERNALSYM SymFunctionTableAccess}
function SymFunctionTableAccess(hProcess: THandle; AddrBase: DWORD): Pointer; stdcall;

{$EXTERNALSYM SymGetModuleInfo}
function SymGetModuleInfo(hProcess: THandle; dwAddr: DWORD;
  var ModuleInfo: TImagehlpModule): Bool; stdcall;

{$EXTERNALSYM SymGetModuleBase}
function SymGetModuleBase(hProcess: THandle; dwAddr: DWORD): DWORD; stdcall;

{$EXTERNALSYM SymGetSymFromAddr}
function SymGetSymFromAddr(hProcess: THandle; dwAddr: DWORD;
  pdwDisplacement: PDWORD; var Symbol: TImagehlpSymbol): Bool; stdcall;

{$EXTERNALSYM SymGetSymFromName}
function SymGetSymFromName(hProcess: THandle; Name: LPSTR;
  var Symbol: TImagehlpSymbol): Bool; stdcall;

{$EXTERNALSYM SymGetSymNext}
function SymGetSymNext(hProcess: THandle; var Symbol: TImagehlpSymbol): Bool; stdcall;
